--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "start:production": "cd api && npm run start:production && cd ../client && npm run start:production"
   },
   "devDependencies": {
-    "husky": "^4.0.0-beta.5"
+    "husky": "^4.3.8"
   },
   "husky": {
     "hooks": {
       "pre-commit": "npm run pre-commit"
     }
-  },
-  "dependencies": {}
+  }
 }
